Fix too long titles

--- a/projectforum/static/css/base.css
+++ b/projectforum/static/css/base.css
@@ -151,6 +151,7 @@ a:hover {
   text-decoration: none; }
 
 .project_status {
+  margin-left: 10px;
   margin-right: 10px;
   padding: 10px;
   float: right;
@@ -159,24 +160,21 @@ a:hover {
   color: #929292; }
 
 .title_tab {
-  display: inline-block;
+  display: block;
   margin-bottom: 0px;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 10px 10px 0px 0px;
-  background: #ADC4CC; }
+  background: #ADC4CC;
+  overflow: hidden;
+  height: 67px;
+  max-width: 100%; }
 
 .title_tab:after {
   border-bottom-left-radius: 6px;
   border-width: 0 0 5px 5px; }
-
-.project_detail_title {
-  display: inline-block;
-  vertical-align: text-bottom;
-  overflow: hidden;
-  max-width: 100%; }
 
 .project_detail_description {
   padding: 20px 10px 10px;
