--- a/projectforum/static/scss/specific/_project_detail.scss
+++ b/projectforum/static/scss/specific/_project_detail.scss
@@ -3,6 +3,7 @@
 @import '../common';
 
 .project_status {
+    margin-left: 10px;
     margin-right: 10px;
     padding: 10px;
     float: right;
@@ -12,7 +13,7 @@
 }
 
 .title_tab {
-    display: inline-block;
+    display: block;
     margin-bottom: 0px;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -20,18 +21,14 @@
     padding-right: 20px;
     border-radius: 10px 10px 0px 0px;
     background: $theme-col-main;
+    overflow: hidden;
+    height: 67px;
+    max-width: 100%;
 }
 
 .title_tab:after{
     border-bottom-left-radius: 6px;
     border-width: 0 0 5px 5px;
-}
-
-.project_detail_title {
-    display: inline-block;
-    vertical-align: text-bottom;
-    overflow: hidden;
-    max-width: 100%;
 }
 
 .project_detail_description {
